# BAFE

./: .gitignore  AGENTS.md  BAFE-patch.tar  CHANGELOG.md  CLAUDE.md  CONTRACT.md  Dockerfile  ELEVENLABS_SETUP.md  QWEN.md  README.md  ci.yml  claudeTest0502.md  fly.launch.toml  fly.toml  pyproject.toml  pytest.ini  railway.toml  test_ephe.py  tests.yml
bazi_engine/: __init__.py  app.py  aspects.py  bazi.py  constants.py  ephemeris.py  fusion.py  narrative.py  provenance.py  time_utils.py  transit.py  types.py  western.py
docs/: BAFE-architecture.txt  REPORT-Stabilization050326.md  REPO_ANALYSIS_DE.md  railway.md
scripts/: export_openapi.py
tests/: conftest.py  golden_reference_cases.py  test_affinity_derivation.py  test_affinity_integration.py  test_api.py  test_aspects.py  test_aspects_negative.py  test_calibration.py  test_chart.py  test_constants.py  test_contribution_ledger.py  test_endpoint_negative.py  test_endpoints.py  test_ephemeris_fallback.py  test_error_handling.py  test_fusion.py  test_golden.py  test_golden_vectors.py  test_import_hierarchy.py  test_integration_fusion.py  test_invariants.py  test_lichun_transitions.py  test_narrative_negative.py  test_openapi_contract.py  test_parameter_set.py  test_phases.py  test_pillar_trace.py  test_properties.py  test_provenance.py  test_research.py  test_routers_shared.py  test_ruleset_driven.py  test_services_auth.py  test_services_geocoding.py  test_snapshot_stability.py  test_solar_time.py  test_time_utils.py  test_transit.py  test_transit_cache.py  test_transit_events_negative.py  (+7 more)
tools/: leandeep_client.py
(+241 files in other folders)
